# llm-text-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: sample_inputs.py
outputs/: result_1.json  result_2.json  result_3.json
src/llm_text_pipeline/: cli.py  llm_client.py  pipeline.py  prompts.py  result_writer.py  routing.py  schemas.py  self_check.py
tests/: test_cli.py  test_llm_client.py  test_pipeline.py  test_prompts.py  test_result_writer.py  test_routing.py  test_sample_inputs.py  test_schemas.py  test_self_check.py
