[project]
name = "llm-text-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "python-dotenv",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_text_pipeline"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]